# deep_dataclasses

./: .gitignore  .readthedocs.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: pr_checks.yml  tests.yml
doc/: Makefile  README.md  api.md  conf.py  deep_dataclass.md  extras.md  index.md  requirements.txt  to_json_schema.md
src/deep_dataclasses/: __init__.py  deep_dataclass.py  json_schema.py
src/deep_dataclasses/extras/: __init__.py
test/: test_3rdparty_dacite_compatibillity.py  test_3rdparty_dataclasswizard_compatibillity.py  test_3rdparty_pydanticdataclasess_compatibillity.py  test_core_dataclass_arguments_compatibillity.py  test_core_dataclass_equivalence.py  test_core_inheritance.py  test_core_jsonschema.py  test_core_nofuture_annotations.py  test_dacite_compatibillity.py  test_dataclass_arguments_compatibillity.py  test_dataclass_equivalence.py  test_dataclasswizard_compatibillity.py  test_extras_validate_defaults.py  test_mutable_defaults.py  test_pydanticdataclasess_compatibillity.py  test_str_annotations.py  test_types_dicts.py  test_types_lists.py  test_types_nested.py  test_types_optionals.py  test_types_tuples.py  test_types_unions.py
