[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deep_dataclasses"
description = "Deep dataclasses with nested structures and validation"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Anguelos", email = "anguelos.nicolaou@gmail.com"}
]
keywords = ["dataclasses", "nested", "validation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dynamic = ["version"]

[tool.setuptools.dynamic.version]
attr = "deep_dataclasses.__version__"

[project.optional-dependencies]
dev = ["pytest>=7.0", "black", "flake8", "mypy"]

[project.urls]
Homepage = "https://github.com/anguelos/deep_dataclasses"
Repository = "https://github.com/anguelos/deep_dataclasses.git"