[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deep_dataclasses"
description = "Deep dataclasses with nested structures and validation"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "Anguelos", email = "anguelos.nicolaou@gmail.com"}
]
keywords = ["dataclasses", "nested", "validation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]
dynamic = ["version"]

[tool.setuptools.dynamic.version]
attr = "deep_dataclasses.__version__"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "coverage",
    "dacite",
    "dataclass-wizard",
    "pydantic",
]
doc = [
    "sphinx>=7.0",
    "furo",
    "myst-parser[linkify]",
    "sphinx-copybutton",
]
extras = [
    "jsonschema",
]
dev = [
    "deep_dataclasses[test]",
    "deep_dataclasses[doc]",
    "deep_dataclasses[extras]",
    "ruff",
    "mypy",
    "build",
    "twine",
]

[project.urls]
Homepage = "https://github.com/anguelos/deep_dataclasses"
Repository = "https://github.com/anguelos/deep_dataclasses.git"

# ---------------------------------------------------------------------------
# Formatting and linting
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 160

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E702"]

[tool.ruff.format]
quote-style = "single"
